--- a/_pages/dl2018.md
+++ b/_pages/dl2018.md
@@ -1,7 +1,7 @@
 ---
 title: "Deep Learning, PKU summer school, 2018"
 permalink: /teaching/dl2018
-author_profile: False
+author_profile: True
 ---
 
 * Day 1: Introduction \& Mathematics ([Intro](/files/dl2018/Intro_01.pdf), [probability](probability_02.pdf), [project](project.pdf))
