--- a/_pages/dl2018.md
+++ b/_pages/dl2018.md
@@ -4,10 +4,10 @@ permalink: /teaching/dl2018
 author_profile: True
 ---
 
-* Day 1: Introduction \& Mathematics ([Intro](/files/dl2018/Intro_01.pdf), [probability](/files/dl2018/probability_02.pdf), [project](/files/dl2018/project.pdf))
+* Day 1: Introduction & Mathematics ([Intro](/files/dl2018/Intro_01.pdf), [probability](/files/dl2018/probability_02.pdf), [project](/files/dl2018/project.pdf))
 * Day 2: Machine Learning Basics
-* Day 3: Feedforward Neural Networks \& Optimization Tricks
-* Day 4: Convolutional Neural Networks \& Recurrent Neural Networks
+* Day 3: Feedforward Neural Networks & Optimization Tricks
+* Day 4: Convolutional Neural Networks & Recurrent Neural Networks
 * Day 5: Deep Learning for Natural Language Understanding
-* Day 6: Graph Representation Learning \& Recommendation
+* Day 6: Graph Representation Learning & Recommendation
 * Day 7: Poster Session
