--- a/_pages/dl2018.md
+++ b/_pages/dl2018.md
@@ -6,7 +6,7 @@ author_profile: True
 
 * Day 1: Introduction & Mathematics ([Intro](/files/dl2018/Intro_01.pdf), [probability](/files/dl2018/probability_02.pdf), [project](/files/dl2018/project.pdf))
 * Day 2: Machine Learning Basics ([ML-01](/files/dl2018/ML-03.pdf), [ML-02](/files/dl2018/ML-04.pdf))
-* Day 3: Feedforward Neural Networks & Optimization Tricks ([FNN](/files/dl2018/FNN-05.pdf), [regularization](/files/dl2018/Regularization-06.pdf))
+* Day 3: Feedforward Neural Networks & Optimization Tricks ([FNN](/files/dl2018/FFN-05.pdf), [regularization](/files/dl2018/Regularization-06.pdf))
 * Day 4: Convolutional Neural Networks & Recurrent Neural Networks([CNN](/files/dl2018/CNN_07.pdf))
 * Day 5: Deep Learning for Natural Language Understanding
 * Day 6: Graph Representation Learning & Recommendation
